src/main/java/com/example/gominbreakbackend/global/error/ErrorCode.java
package com.example.gominbreakbackend.global.error;public class ErrorCode {
}
